@@ -440,7 +440,7 @@ for my $command (sort keys %flag_commands) {
 is ($err, '', 'Allowed the empty argument');
 is ($OUTPUT, "command show type  from admin (1.2.3.4) succeeded\n",
     ' and success logged');
-my $ok = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_/.-';
+my $ok = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_/.@-';
 ($out, $err) = run_backend ('show', 'type', $ok);
 is ($err, '', 'Allowed all valid characters');
 is ($OUTPUT, "command show type $ok from admin (1.2.3.4) succeeded\n",
